tree-sitter-plotnik/test/corpus/fields.txt
================================================================================
Field constraints
================================================================================
Q = (assignment_expression
  left: (identifier) @target
  right: (call_expression) @value)
--------------------------------------------------------------------------------

(source_file
  (definition
    (type_identifier)
    (named_node
      (identifier)
      (captured_pattern
        (field
          (identifier)
          (named_node
            (identifier)))
        (capture))
      (captured_pattern
        (field
          (identifier)
          (named_node
            (identifier)))
        (capture)))))

================================================================================
Field values of each allowed kind
================================================================================
Q = (p
  a: (node)
  b: (Ref)
  c: "lit"
  d: _
  e: {(x)}
  f: [(x) (y)]
  g: h: (nested)
)
--------------------------------------------------------------------------------

(source_file
  (definition
    (type_identifier)
    (named_node
      (identifier)
      (field
        (identifier)
        (named_node
          (identifier)))
      (field
        (identifier)
        (def_ref
          (type_identifier)))
      (field
        (identifier)
        (string
          (string_content)))
      (field
        (identifier)
        (wildcard))
      (field
        (identifier)
        (sequence
          (named_node
            (identifier))))
      (field
        (identifier)
        (alternation
          (alternative
            (named_node
              (identifier)))
          (alternative
            (named_node
              (identifier)))))
      (field
        (identifier)
        (field
          (identifier)
          (named_node
            (identifier)))))))

================================================================================
Quantifier and capture apply to the whole field
================================================================================
Q = (class_declaration decorator: (decorator)* @decorators)
--------------------------------------------------------------------------------

(source_file
  (definition
    (type_identifier)
    (named_node
      (identifier)
      (captured_pattern
        (quantified_pattern
          (field
            (identifier)
            (named_node
              (identifier)))
          (quantifier))
        (capture)))))

================================================================================
Negated field
================================================================================
Q = (function_declaration name: (identifier) @name -type_parameters)
--------------------------------------------------------------------------------

(source_file
  (definition
    (type_identifier)
    (named_node
      (identifier)
      (captured_pattern
        (field
          (identifier)
          (named_node
            (identifier)))
        (capture))
      (negated_field
        (identifier)))))

================================================================================
Field with alternation value captured
================================================================================
Q = (statement value: [A: (x) B: (y)] @kind)
--------------------------------------------------------------------------------

(source_file
  (definition
    (type_identifier)
    (named_node
      (identifier)
      (captured_pattern
        (field
          (identifier)
          (alternation
            (alternative
              (type_identifier)
              (named_node
                (identifier)))
            (alternative
              (type_identifier)
              (named_node
                (identifier)))))
        (capture)))))
