tree-sitter-plotnik/test/corpus/refinements.txt
================================================================================
Native supertype refinement
================================================================================
Q = (expression#binary_expression)
--------------------------------------------------------------------------------

(source_file
  (definition
    (type_identifier)
    (named_node
      (identifier)
      (identifier))))

================================================================================
Bare category
================================================================================
Q = (value#)
--------------------------------------------------------------------------------

(source_file
  (definition
    (type_identifier)
    (named_node
      (identifier))))

================================================================================
Deprecated slash spelling
================================================================================
Q = (expression/binary_expression)
--------------------------------------------------------------------------------

(source_file
  (definition
    (type_identifier)
    (named_node
      (identifier)
      (identifier))))

================================================================================
String subtype
================================================================================
Q = (expression#"()")
--------------------------------------------------------------------------------

(source_file
  (definition
    (type_identifier)
    (named_node
      (identifier)
      (string))))

================================================================================
Subtype with dash, refined node quantified
================================================================================
Q = (value#kebab-case)*
--------------------------------------------------------------------------------

(source_file
  (definition
    (type_identifier)
    (quantified_pattern
      (named_node
        (identifier)
        (identifier))
      (quantifier))))

================================================================================
Refinement then predicate then children
================================================================================
Q = (expression#call == "f()" (arguments))
--------------------------------------------------------------------------------
